<resources>
    <string name="app_name">NSS Friends Scheme</string>
    <string name="rand_quote">Random Quote</string>
    <string name="quote">My Favorite Quotes</string>
    <string name="click">Click Here</string>
    <string name="creator">Created by Boub</string>
    <string name="winner">Winner</string>
    <string name="quoteIntro">Quote of the Day</string>
    <string name="shuffle">Shuffle</string>
    <string name="congs">Congratulations</string>
    <string name="welcome2">Welcome to #FSS Mobile App</string>
    <string name="welcome">Welcome to Friends Scheme Raffle Drawer</string>
    <string name="members">Enter the names of the members available</string>
</resources>
